--- a/microservice-assure.properties
+++ b/microservice-assure.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 urbanisation-si.clairprev.limiteNombreAssure=5
+
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
