--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -10,3 +10,5 @@ spring.datasource.username=mei
 spring.datasource.password=
 
 urbanisation-si.clairprev.limiteNombreProduit=3
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
