--- a/microservice-contrat.properties
+++ b/microservice-contrat.properties
@@ -1,5 +1,5 @@
 #server.port=9997
-spring.application.name=microservice-contrat
+#spring.application.name=microservice-contrat
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/contrat_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=Mei
