--- a/microservice-contrat.properties
+++ b/microservice-contrat.properties
@@ -2,8 +2,8 @@
 #spring.application.name=microservice-contrat
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/contrat_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
-spring.datasource.username=Mei
-spring.datasource.password=motdepasse
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 urbanisation-si.clairprev.limiteNombreContrat=3
 
