--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -1,9 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/contrat_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
-urbanisation-si.clairprev.limiteNombreContrat=3
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/contrat_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.show-sql=true
+#urbanisation-si.clairprev.limiteNombreContrat=3
 
 #Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
